# Maths

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Contributing.md  Dockerfile  Dockerfile_lib  README.md  build_lib.sh  build_server.sh  request.example  response.example  run_sdk_test.sh  units.rs
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: pld.md
.github/workflows/: ci-cd.yaml  create_release.yaml  deploy.yaml  deploy_to_dev.yaml  deploy_to_prod.yaml
ai/: .gitignore  Dockerfile  flask_config.json  flask_main.py  main.py  model.py  requirements.txt  train_model.py
ai/ai_model_building/: README.md  army_builder.py  model.py  stat_parser.py  unit_parser.py  utils.py
ai/data_model_building/: README.md  army_builder.py  generate_models.sh  unit_parser.py  utils.py
ai/neuronal_network/: compute_accuracy.py  dataset_preparation.py  model_builder.py  nn_builder.py  upgrade.py  utils.py
ai/poc/: model_builder.py  poc.py
ai/pocs/: poc.py  test.sh
ai/units_descriptor/: dl.json  eos.json  id.json  koe.json  ong.json  sa.json  ud.json
sdk/typescript/: package-lock.json  package.json  tsconfig.json
src/: charge_reaction.rs  lib.rs  main.rs  units.rs
src/ai/: README.md  model.py
src/ai_integration/: implement_route.rs  mod.rs
src/api/: mod.rs
src/dto/: mod.rs  model.rs  modifier.rs  regiment.rs  stat.rs
src/fight/: computation_tools.rs  full_fight.rs  global_values.rs  mod.rs  shooting.rs  shooting_tools.rs
src/global_test/: mod.rs
src/math_tools/: mod.rs
src/model/: mod.rs
src/modifier/: mod.rs  modifiers_id.rs  modifiers_listing.rs  modifiers_listings.rs
src/prediction/: mod.rs
tests/: add_new_unit.py  initialize_units.rs  integration_tests.rs
(+150 files in other folders)
