[package]
name = "maths"
version = "1.0.0"
authors = ["Paul BEAUDET paul.beaudet@epitech.eu"]
description = "Maths library for our EIP project"
license = "GPL-3.0"
repository = "https://github.com/Prophecy-eip/Maths"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maths"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "prophecy-maths"
path = "src/main.rs"

[dependencies]
axum = "0.6.15"
factorial = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
